adds match logic